:zap: Tweaks for responsive

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
           <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
         </p>
         <div class="c-decoration c-decoration--summary">
+          <img src="images/rectangle-skewed.svg">
         </div>
       </section>
 
@@ -95,9 +96,11 @@
     <footer>
       <div class="l-container">
         <div class="c-decoration c-decoration--bottom">
+          <img src="images/circle.svg">
+          <img src="images/arrow.svg" class="c-decoration__item--arrow">
         </div>
       </div>
-      <p class="copyright">Design by <a href="http://nicolaszimmel.com" target="_blank">Nicolas Zimmel</a></p>
+      <p class="c-copyright">Design by <a href="http://nicolaszimmel.com" target="_blank">Nicolas Zimmel</a></p>
     </footer>
 
     <!-- build:js scripts/main.js -->
