:zap: More RWD tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -80,9 +80,9 @@
         </ol>
       </section>
 
-      <section class="contact">
+      <section class="c-contact">
         <h2 class="c-headline c-headline--contact">
-          <span class="headline__text">Let’s be in touch</span>
+          <span class="headline__text">Let’s<br>be in<br>touch</span>
         </h2>
         <p>
           Say ’Hi’ on
@@ -96,8 +96,10 @@
     <footer>
       <div class="l-container">
         <div class="c-decoration c-decoration--bottom">
-          <img src="images/circle.svg">
-          <img src="images/arrow.svg" class="c-decoration__item--arrow">
+          <img class="c-decoration__item c-decoration__item--circle"
+               src="images/circle.svg">
+          <img class="c-decoration__item c-decoration__item--arrow"
+               src="images/arrow.svg">
         </div>
       </div>
       <p class="c-copyright">Design by <a href="http://nicolaszimmel.com" target="_blank">Nicolas Zimmel</a></p>
