--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 
       <section class="c-contact">
         <h2 class="c-headline c-headline--contact">
-          <span class="headline__text">Let’s<br>be in<br>touch</span>
+          <span class="c-headline__text">Let’s <br>be in <br>touch</span>
         </h2>
         <p>
           Say ’Hi’ on
