:zap: Final RWD tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -28,16 +28,18 @@
   <body>
     <header class="c-header">
       <div class="c-header__bar"></div>
-      <div class="l-container">
-        <h1 class="c-headline c-headline--header">
-          <span class="c-headline__text">Łukasz Kliś</span>
-        </h1>
-        <div class="c-header__intro">
-          <p>My name is Łukasz, I live in Berlin, Germany.</p>
-          <p>
-            I’m a frontend developer passionate about modern development techniques and standards. Currently focused
-            on Angular &amp; TypeScript.
-          </p>
+      <div class="c-header__content">
+        <div class="l-container">
+          <h1 class="c-headline c-headline--header">
+            <span class="c-headline__text">Łukasz Kliś</span>
+          </h1>
+          <div class="c-header__intro">
+            <p>My name is Łukasz, I live in Berlin, Germany.</p>
+            <p>
+              I’m a frontend developer passionate about modern development techniques and standards. Currently focused
+              on Angular &amp; TypeScript.
+            </p>
+          </div>
         </div>
       </div>
     </header>
