:bug: Fix whitespace issue

--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
 
       <section class="c-contact">
         <h2 class="c-headline c-headline--contact">
-          <span class="c-headline__text">Let’s <br>be in <br>touch</span>
+          <span class="c-headline__text">Let’s&nbsp;<br>be in <br>touch</span>
         </h2>
         <p>
           Say ’Hi’ on
