--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,10 @@
 
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="628">
-    <meta property="og:description" content="A front-end developer based in Berlin, Germany. Specializes in building and maintaining large web applications.">
+    <meta property="og:description" content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications.">
     <meta property="og:url" content="https://lukaszklis.com">
     <meta property="og:image" content="https://lukaszklis.com/images/og-image.jpg">
-    <meta property="og:title" content="Łukasz Kliś&nbsp;&mdash; Front-end Developer, Berlin">
+    <meta property="og:title" content="Łukasz Kliś&nbsp;&mdash; Frontend Developer, Berlin">
 
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -53,7 +53,8 @@
           I’m volunteering at
           <a class="c-summary__link c-summary__link--past" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a>,
           <a class="c-summary__link c-summary__link--past" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>,
-          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>, and
+          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>,
+          <a class="c-summary__link" href="https://jsconf.eu" target="_blank" rel="noopener">JSConf EU</a> &amp;
           <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
         </p>
         <div class="c-decoration c-decoration--summary">
