:zap: Update current position

--- a/app/index.html
+++ b/app/index.html
@@ -50,10 +50,11 @@
           <img src="images/lukasz.jpg" alt="Photo of Łukasz Kliś">
         </figure>
         <p class="c-summary__text">
-          I’m volunteering at
+          I’m organising
+          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>
+          &amp; volunteering at
           <a class="c-summary__link c-summary__link--past" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a>,
           <a class="c-summary__link c-summary__link--past" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>,
-          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>,
           <a class="c-summary__link" href="https://jsconf.eu" target="_blank" rel="noopener">JSConf EU</a> &amp;
           <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
         </p>
@@ -67,7 +68,7 @@
         <ol class="c-experience__items">
           <li class="c-experience__item">
             <a href="https://www.rebuy.de/" target="_blank" rel="noopener">reBuy reCommerce GmbH</a>
-            <div>Senior Frontend Developer</div>
+            <div>Team Lead &amp; Senior Frontend Developer</div>
             <div class="c-experience__time">Currently</div>
           </li>
           <li class="c-experience__item">
