:zap: Change summary

--- a/app/index.html
+++ b/app/index.html
@@ -51,12 +51,16 @@
         </figure>
         <p class="c-summary__text">
           I’m organising
-          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>
-          &amp; volunteering at
-          <a class="c-summary__link c-summary__link--past" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a>,
-          <a class="c-summary__link c-summary__link--past" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>,
-          <a class="c-summary__link" href="https://jsconf.eu" target="_blank" rel="noopener">JSConf EU</a> &amp;
+          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>,
+          volunteering at
+          <a class="c-summary__link" href="https://jsconf.eu" target="_blank" rel="noopener">JSConf EU</a>
+          and coaching at
           <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
+        </p>
+        <p class="c-summary__text">
+          Previously helped out with<br>
+          <a class="c-summary__link c-summary__link--past" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a> &amp;
+          <a class="c-summary__link c-summary__link--past" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>.
         </p>
         <div class="c-decoration c-decoration--summary">
           <svg viewBox="0 0 79 179">
