:zap: Change date ranges

--- a/app/index.html
+++ b/app/index.html
@@ -81,17 +81,17 @@
           <li class="c-experience__item">
             <a href="https://www.rebuy.de/" target="_blank" rel="noopener">reBuy reCommerce GmbH</a>
             <div>Team Lead &amp; Senior Frontend Developer</div>
-            <div class="c-experience__time">Currently</div>
+            <div class="c-experience__time">08/2016 - Currently</div>
           </li>
           <li class="c-experience__item">
             <a href="http://www.wimdu.com/" target="_blank" rel="noopener">Wimdu</a>
             <div>Engineering Manager, Team Lead &amp; Frontend Developer</div>
-            <div class="c-experience__time">From 09/2013 to 07/2016</div>
+            <div class="c-experience__time">09/2013 - 07/2016</div>
           </li>
           <li class="c-experience__item">
             <div>MING Labs, Oyatel, Grupa Nokaut</div>
             <div>Frontend Development</div>
-            <div class="c-experience__time">Before</div>
+            <div class="c-experience__time">09/2009 - 08/2013</div>
           </li>
         </ol>
       </section>
