--- a/app/index.html
+++ b/app/index.html
@@ -101,10 +101,11 @@
           <span class="c-headline__text">Let’s&nbsp;<br>be in <br>touch</span>
         </h2>
         <p>
-          Say ’Hi’ on
-          <a href="https://www.linkedin.com/in/lukaszklis">LinkedIn</a>,
-          <a href="https://twitter.com/lukaszklis">Twitter</a>,
-          <a href="https://github.com/lukaszklis">GitHub</a>, or <a href="mailto:hi@lukaszklis.com">write me something</a>.
+          Say ”Hi” on
+          <a href="https://www.linkedin.com/in/lukaszklis" rel="noopener">LinkedIn</a>,
+          <a href="https://twitter.com/lukaszklis" rel="noopener">Twitter</a>,
+          <a href="https://github.com/lukaszklis" rel="noopener">GitHub</a>,
+          or <a href="mailto:hi@lukaszklis.com">write me something</a>.
         </p>
       </section>
     </main>
@@ -136,7 +137,9 @@
           </div>
         </div>
       </div>
-      <p class="c-copyright">Design by <a href="http://nicolaszimmel.com" target="_blank">Nicolas Zimmel</a></p>
+      <p class="c-copyright">
+        Design by <a href="http://nicolaszimmel.com" target="_blank" rel="noopener">Nicolas Zimmel</a>
+      </p>
     </footer>
 
     <!-- build:js scripts/main.js -->
