:zap: Prevent mobile Safari from phone number matching

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>Łukasz Kliś &mdash; Frontend Developer, Berlin</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
