:zap: Change wording for summary

--- a/app/index.html
+++ b/app/index.html
@@ -59,9 +59,9 @@
           <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
         </p>
         <p class="c-summary__text">
-          Previously helped out with<br>
-          <a class="c-summary__link c-summary__link--past" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a> &amp;
-          <a class="c-summary__link c-summary__link--past" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>.
+          Previously involved in
+          <a class="c-summary__link" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a> and<br>
+          <a class="c-summary__link" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>.
         </p>
         <div class="c-decoration c-decoration--summary">
           <svg viewBox="0 0 79 179">
