--- a/app/index.html
+++ b/app/index.html
@@ -1,29 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="description" content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications.">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="format-detection" content="telephone=no">
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="format-detection" content="telephone=no" />
     <title>Łukasz Kliś &mdash; Frontend Developer, Berlin</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1258f8">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1258f8" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
 
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="628">
-    <meta property="og:description" content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications.">
-    <meta property="og:url" content="https://lukaszklis.com">
-    <meta property="og:image" content="https://lukaszklis.com/images/og-image.jpg">
-    <meta property="og:title" content="Łukasz Kliś&nbsp;&mdash; Frontend Developer, Berlin">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="628" />
+    <meta
+      property="og:description"
+      content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+    />
+    <meta property="og:url" content="https://lukaszklis.com" />
+    <meta
+      property="og:image"
+      content="https://lukaszklis.com/images/og-image.jpg"
+    />
+    <meta
+      property="og:title"
+      content="Łukasz Kliś&nbsp;&mdash; Frontend Developer, Berlin"
+    />
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css" />
     <!-- endbuild -->
   </head>
   <body>
@@ -37,8 +49,9 @@
           <div class="c-header__intro">
             <p>My name is Łukasz, I live in Berlin, Germany.</p>
             <p>
-              I’m a frontend developer passionate about modern development techniques and standards. Currently focused
-              on Angular &amp; TypeScript.
+              I’m a frontend developer passionate about modern development
+              techniques and standards. Currently focused on Angular &amp;
+              TypeScript.
             </p>
           </div>
         </div>
@@ -48,31 +61,65 @@
     <main class="l-container">
       <section class="c-summary">
         <figure class="c-summary__figure">
-          <img src="images/lukasz.jpg" alt="Photo of Łukasz Kliś">
+          <img src="images/lukasz.jpg" alt="Photo of Łukasz Kliś" />
         </figure>
         <p class="c-summary__text">
           I’m organising
-          <a class="c-summary__link" href="https://cssconf.eu" target="_blank" rel="noopener">CSSconf EU</a>,
-          volunteering at
-          <a class="c-summary__link" href="https://jsconf.eu" target="_blank" rel="noopener">JSConf EU</a>
+          <a
+            class="c-summary__link"
+            href="https://cssconf.eu"
+            target="_blank"
+            rel="noopener"
+          >
+            CSSconf EU </a
+          >, volunteering at
+          <a
+            class="c-summary__link"
+            href="https://jsconf.eu"
+            target="_blank"
+            rel="noopener"
+          >
+            JSConf EU
+          </a>
           and coaching at
-          <a class="c-summary__link" href="https://cssclass.es" target="_blank" rel="noopener">CSSclasses</a>.
+          <a
+            class="c-summary__link"
+            href="https://cssclass.es"
+            target="_blank"
+            rel="noopener"
+          >
+            CSSclasses </a
+          >.
         </p>
         <p class="c-summary__text">
           Previously involved in
-          <a class="c-summary__link" href="http://meetjs.pl" target="_blank" rel="noopener">meet.js</a> and<br>
-          <a class="c-summary__link" href="http://front-trends.com" target="_blank" rel="noopener">Front-Trends</a>.
+          <a
+            class="c-summary__link"
+            href="http://meetjs.pl"
+            target="_blank"
+            rel="noopener"
+          >
+            meet.js
+          </a>
+          and<br />
+          <a
+            class="c-summary__link"
+            href="http://front-trends.com"
+            target="_blank"
+            rel="noopener"
+          >
+            Front-Trends </a
+          >.
         </p>
         <div class="c-decoration c-decoration--summary">
           <svg viewBox="0 0 79 179">
-            <image height="179px"
-                   width="79px"
-                   xlink:href="images/rectangle-skewed.svg">
-            </image>
+            <image
+              height="179px"
+              width="79px"
+              xlink:href="images/rectangle-skewed.svg"
+            ></image>
           </svg>
-          <link href="images/rectangle-skewed.svg"
-                rel="preload"
-                as="image">
+          <link href="images/rectangle-skewed.svg" rel="preload" as="image" />
         </div>
       </section>
 
@@ -80,12 +127,16 @@
         <h2 class="c-headline c-headline--experience">Experience</h2>
         <ol class="c-experience__items">
           <li class="c-experience__item">
-            <a href="https://www.rebuy.de/" target="_blank" rel="noopener">reBuy reCommerce GmbH</a>
+            <a href="https://www.rebuy.de/" target="_blank" rel="noopener">
+              reBuy
+            </a>
             <div>Team Lead &amp; Senior Frontend Developer</div>
             <div class="c-experience__time">08/2016 - Currently</div>
           </li>
           <li class="c-experience__item">
-            <a href="http://www.wimdu.com/" target="_blank" rel="noopener">Wimdu</a>
+            <a href="http://www.wimdu.com/" target="_blank" rel="noopener">
+              Wimdu
+            </a>
             <div>Engineering Manager, Team Lead &amp; Frontend Developer</div>
             <div class="c-experience__time">09/2013 - 07/2016</div>
           </li>
@@ -99,14 +150,18 @@
 
       <section class="c-contact">
         <h2 class="c-headline c-headline--contact">
-          <span class="c-headline__text">Let’s&nbsp;<br>be in <br>touch</span>
+          <span class="c-headline__text">
+            Let’s&nbsp;<br />be in <br />touch
+          </span>
         </h2>
         <p>
           Say ”Hi” on
-          <a href="https://www.linkedin.com/in/lukaszklis" rel="noopener">LinkedIn</a>,
+          <a href="https://www.linkedin.com/in/lukaszklis" rel="noopener"
+            >LinkedIn</a
+          >,
           <a href="https://twitter.com/lukaszklis" rel="noopener">Twitter</a>,
-          <a href="https://github.com/lukaszklis" rel="noopener">GitHub</a>,
-          or <a href="mailto:hi@lukaszklis.com">write me something</a>.
+          <a href="https://github.com/lukaszklis" rel="noopener">GitHub</a>, or
+          <a href="mailto:hi@lukaszklis.com">write me something</a>.
         </p>
       </section>
     </main>
@@ -116,30 +171,31 @@
         <div class="c-decoration c-decoration--bottom">
           <div class="c-decoration__item c-decoration__item--circle">
             <svg viewBox="0 0 329 329">
-              <image height="329px"
-                     width="329px"
-                     xlink:href="images/circle.svg">
-              </image>
+              <image
+                height="329px"
+                width="329px"
+                xlink:href="images/circle.svg"
+              ></image>
             </svg>
-            <link href="images/circle.svg"
-                  rel="preload"
-                  as="image">
+            <link href="images/circle.svg" rel="preload" as="image" />
           </div>
           <div class="c-decoration__item c-decoration__item--arrow">
             <svg viewBox="0 0 151 162">
-              <image height="162px"
-                     width="151px"
-                     xlink:href="images/arrow.svg">
-              </image>
+              <image
+                height="162px"
+                width="151px"
+                xlink:href="images/arrow.svg"
+              ></image>
             </svg>
-            <link href="images/arrow.svg"
-                  rel="preload"
-                  as="image">
+            <link href="images/arrow.svg" rel="preload" as="image" />
           </div>
         </div>
       </div>
       <p class="c-copyright">
-        Design by <a href="http://nicolaszimmel.com" target="_blank" rel="noopener">Nicolas Zimmel</a>
+        Design by
+        <a href="http://nicolaszimmel.com" target="_blank" rel="noopener">
+          Nicolas Zimmel
+        </a>
       </p>
     </footer>
 
