:bug: Fix white-space for links

--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
             target="_blank"
             rel="noopener"
           >
-            CSSconf EU </a
+            CSSconf EU</a
           >, volunteering at
           <a
             class="c-summary__link"
@@ -79,8 +79,8 @@
             target="_blank"
             rel="noopener"
           >
-            JSConf EU
-          </a>
+            JSConf EU</a
+          >
           and coaching at
           <a
             class="c-summary__link"
@@ -88,7 +88,7 @@
             target="_blank"
             rel="noopener"
           >
-            CSSclasses </a
+            CSSclasses</a
           >.
         </p>
         <p class="c-summary__text">
@@ -99,8 +99,8 @@
             target="_blank"
             rel="noopener"
           >
-            meet.js
-          </a>
+            meet.js</a
+          >
           and<br />
           <a
             class="c-summary__link"
@@ -108,7 +108,7 @@
             target="_blank"
             rel="noopener"
           >
-            Front-Trends </a
+            Front-Trends</a
           >.
         </p>
         <div class="c-decoration c-decoration--summary">
