--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
     <main class="l-container">
       <section class="c-summary">
         <figure class="c-summary__figure">
-          <img src="images/lukasz.jpg" alt="Photo of Łukasz Kliś" />
+          <img src="images/lukasz-klis.jpg" alt="Photo of Łukasz Kliś" />
         </figure>
         <p class="c-summary__text">
           I’m organising
