Update the experience section

--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+      content="A full stack developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Łukasz Kliś &mdash; Frontend Developer, Berlin</title>
+    <title>Łukasz Kliś &mdash; Full Stack Developer, Berlin</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -22,7 +22,7 @@
     <meta property="og:image:height" content="628" />
     <meta
       property="og:description"
-      content="A frontend developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+      content="A full stack developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
     />
     <meta property="og:url" content="https://lukaszklis.com" />
     <meta
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:title"
-      content="Łukasz Kliś&nbsp;&mdash; Frontend Developer, Berlin"
+      content="Łukasz Kliś &mdash; Full Stack Developer, Berlin"
     />
 
     <!-- build:css styles/main.css -->
@@ -49,9 +49,9 @@
           <div class="c-header__intro">
             <p>My name is Łukasz, I live in Berlin, Germany.</p>
             <p>
-              I’m a frontend developer passionate about modern development
-              techniques and standards. Currently focused on Angular &amp;
-              TypeScript.
+              I’m a full stack developer passionate about modern development
+              techniques and standards.<br />
+              Currently focused on Elm &amp; Scala.
             </p>
           </div>
         </div>
@@ -102,14 +102,7 @@
             meet.js</a
           >
           and<br />
-          <a
-            class="c-summary__link"
-            href="http://front-trends.com"
-            target="_blank"
-            rel="noopener"
-          >
-            Front-Trends</a
-          >.
+          Front-Trends.
         </p>
         <div class="c-decoration c-decoration--summary">
           <svg viewBox="0 0 79 179">
@@ -127,11 +120,18 @@
         <h2 class="c-headline c-headline--experience">Experience</h2>
         <ol class="c-experience__items">
           <li class="c-experience__item">
+            <a href="https://coya.com/" target="_blank" rel="noopener">
+              Coya
+            </a>
+            <div>Full Stack Developer</div>
+            <div class="c-experience__time">10/2019 - Currently</div>
+          </li>
+          <li class="c-experience__item">
             <a href="https://www.rebuy.de/" target="_blank" rel="noopener">
               reBuy
             </a>
             <div>Team Lead &amp; Senior Frontend Developer</div>
-            <div class="c-experience__time">08/2016 - Currently</div>
+            <div class="c-experience__time">08/2016 - 09/2019</div>
           </li>
           <li class="c-experience__item">
             <a href="http://www.wimdu.com/" target="_blank" rel="noopener">
