--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="A full stack developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+      content="A full stack developer based in Wrocław, Poland. Specializes in building and maintaining large web applications."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Łukasz Kliś &mdash; Full Stack Developer, Berlin</title>
+    <title>Łukasz Kliś - Full Stack Developer, Wrocław, Poland</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -22,7 +22,7 @@
     <meta property="og:image:height" content="628" />
     <meta
       property="og:description"
-      content="A full stack developer based in Berlin, Germany. Specializes in building and maintaining large web applications."
+      content="A full stack developer based in Wrocław, Poland. Specializes in building and maintaining large web applications."
     />
     <meta property="og:url" content="https://lukaszklis.com" />
     <meta
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:title"
-      content="Łukasz Kliś &mdash; Full Stack Developer, Berlin"
+      content="Łukasz Kliś - Full Stack Developer, Wrocław, Poland"
     />
 
     <!-- build:css styles/main.css -->
@@ -47,7 +47,7 @@
             <span class="c-headline__text">Łukasz Kliś</span>
           </h1>
           <div class="c-header__intro">
-            <p>My name is Łukasz, I live in Berlin, Germany.</p>
+            <p>My name is Łukasz, I live in Wrocław, Poland.</p>
             <p>
               I’m a full stack developer passionate about modern development
               techniques and standards.<br />
