Update intro section

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
             <p>
               I’m a full stack developer passionate about modern development
               techniques and standards.<br />
-              Currently focused on Elm &amp; Scala.
+              Currently focused on React, Python &amp; Scala.
             </p>
           </div>
         </div>
